# python_blank

./: README.md  setup.cfg
src/mod_name/: __init__.py  runner.py
tests/mod_name/: test_mod_name.py
