[metadata]
name = ProjectName
version = file: VERSION.txt
author = Brandon Nesterenko
author_email = bnestere@uccs.edu
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bnestere/blank_project
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.5
setup_requires = 
    flake8
    wheel
    pytest-runner
tests_require=
    pytest

[options.entry_points]
console_scripts=
    my-pyt-exe = mod_name.runner:main


[options.packages.find]
where=src

[aliases]
test=pytest
